Add PlantManager a meus projetos

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
 
       <div class="projetos">
-         <img src="./img/Rifatube.jpg" alt="Resultado da aplicação Rifatube">
+         <img src="./img/rifatube.jpg" alt="Resultado da aplicação Rifatube">
          <p>Um site onde o usuario pode participar de um sorteio ou usar um dos seus produtos para o sorteio. <br> Feito com NodeJS, ReactJS e TypeScript</p>
          <div class="btnprojetos">
             <a href="https://rifatube.herokuapp.com/">Ver o Resultado <i class="fas fa-laptop"></i></a>
