--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+   <link rel="icon" href="img/favicon.ico" />
    <link rel="preconnect" href="https://fonts.gstatic.com">
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
    <link rel="stylesheet" type="text/css" href="./css/style.css" media="screen" />
@@ -23,62 +24,68 @@
       <div class="sobre">
          <h2>Sobre</h2>
          <img src="./img/OK.jpg" alt="Franciso Wanderly">
-         <p>Estou me graduando em ciências da computação, atualmente estou no 8° periodo, começei na area de desenvolvimento web em 2017 com o Java, passei por PHP, Wordpress e varias outras linguagens e framework, atualmente uso JavaScript com ReactJs e NodeJS.Já trabalhei como freelancer durante seis meses.</p>
+         <p>Estou me graduando em ciências da computação, 
+            atualmente estou no 8° periodo, começei na area 
+            de desenvolvimento web em 2017 com o Java, passei por PHP,
+            Wordpress e varias outras linguagens e framework, atualmente
+            uso JavaScript com ReactJs e NodeJS.Já trabalhei como freelancer
+            durante seis meses.</p>
       </div>
       <h2>Alguns dos meus projetos</h2>
-      <div class="projetos">
-         <img src="./img/ecoletaNLW.jpg" alt="Resultado da aplicação Ecoleta">
-         <p>Um site para encontrar pontos de coleta em sua cidade. <br> Feito com NodeJS,ReactJS, React Native e TypeScript</p>
-         <div class="btnprojetos">
-            <a href="https://ecoleta-reactjs.herokuapp.com/">Ver o Resultado <i class="fas fa-laptop"></i></a>
-            <a href="https://github.com/franwanderley/Ecoleta_NLW">Ver o Codigo <i class="fab fa-github"></i></a>
+      <div class="allproject">
+         <div class="projetos">
+            <img src="./img/todo.jpg" alt="Simples ToDoList">
+            <p>Um simples ToDOList com tema light/dark e que salvar suas informações. <br> Feito com ReactJS, NextJs e TypeScript</p>
+            <div class="btnprojetos">
+               <a href="https://todolist-xi.vercel.app/">Ver o Resultado <i class="fas fa-laptop"></i></a>
+               <a href="https://github.com/franwanderley/ToDoList">Ver o Codigo <i class="fab fa-github"></i></a>
+            </div>
          </div>
-      </div>
 
-      <div class="projetos" id="projetos">
-         <img src="./img/desktop-preview.jpg" alt="Resultado da aplicação ToDoList">
-         <p>Um site para ajudar a não esquecer dos seus deveres do dia a dia <br> Feito com NextJS,ReactJS, React Native e TypeScript</p>
-         <div class="btnprojetos">
-            <a href="https://todolist-xi.vercel.app/">Ver o Resultado <i class="fas fa-laptop"></i></a>
-            <a href="https://github.com/franwanderley/ToDoList">Ver o Codigo <i class="fab fa-github"></i></a>
+         <div class="projetos" id="projetos">
+            <img src="./img/PlantManager.png" alt="Resultado da aplicação PlantManager">
+            <p>Um aplicativo para você não esquecer de regar suas plantas <br> Feito com Expo, React Native e TypeScript</p>
+            <div class="btnprojetos">
+               <a href="https://drive.google.com/file/d/17_FvERMIj2LToRfzFV__T9UET7rR8ZIt/view?usp=sharing">Ver o Resultado <i class="fas fa-laptop"></i></a>
+               <a href="https://github.com/franwanderley/plantmanager">Ver o Codigo <i class="fab fa-github"></i></a>
+            </div>
          </div>
-      </div>
 
-      <div class="projetos">
-         <img src="./img/rifatube.jpg" alt="Resultado da aplicação Rifatube">
-         <p>Um site onde o usuario pode participar de um sorteio ou usar um dos seus produtos para o sorteio. <br> Feito com NodeJS, ReactJS e TypeScript</p>
-         <div class="btnprojetos">
-            <a href="https://rifatube.herokuapp.com/">Ver o Resultado <i class="fas fa-laptop"></i></a>
-            <a href="https://github.com/franwanderley/rifatube">Ver o Codigo <i class="fab fa-github"></i></a>
+         <div class="projetos">
+            <img src="./img/rifatube.jpg" alt="Resultado da aplicação Rifatube">
+            <p>Um site onde o usuario pode participar de um sorteio ou usar um dos seus produtos para o sorteio. <br> Feito com NodeJS, ReactJS e TypeScript</p>
+            <div class="btnprojetos">
+               <a href="https://rifatube.herokuapp.com/">Ver o Resultado <i class="fas fa-laptop"></i></a>
+               <a href="https://github.com/franwanderley/rifatube">Ver o Codigo <i class="fab fa-github"></i></a>
+            </div>
          </div>
-      </div>
-      <br>
-      <div class="projetos">
-         <img src="./img/moveit-desktop.jpg" alt="Resultado da aplicação Moveit">
-         <p>Um site parecido com o pomodoro só que em vez disso os intervalos são exercírcios <br> Feito com NextJs,ReactJS e TypeScript</p>
-         <div class="btnprojetos">
-            <a href="https://moveit-one-iota.vercel.app/">Ver o Resultado <i class="fas fa-laptop"></i></a>
-            <a href="https://github.com/franwanderley/moveit_NLW4">Ver o Codigo <i class="fab fa-github"></i></a>
+         <br>
+         <div class="projetos">
+            <img src="./img/moveit.png" alt="Resultado da aplicação Moveit">
+            <p>Um site parecido com o pomodoro só que em vez disso os intervalos são exercírcios <br> Feito com NextJs,ReactJS e TypeScript</p>
+            <div class="btnprojetos">
+               <a href="https://moveit-one-iota.vercel.app/">Ver o Resultado <i class="fas fa-laptop"></i></a>
+               <a href="https://github.com/franwanderley/moveit_NLW4">Ver o Codigo <i class="fab fa-github"></i></a>
+            </div>
          </div>
-      </div>
 
-      <div class="projetos">
-         <img src="./img/resultado.jpg" alt="Resultado da aplicação APDPRH">
-         <p>Um site para baixar os certificados que foi feito na APDPRH <br> Feito com Adianti Framework,PHP e MySQL</p>
-         <div class="btnprojetos">
-            <a href="http://apdprh-br.org.br/certificados/index.php?class=Login">Ver o Resultado <i class="fas fa-laptop"></i></a>
-            <a href="https://github.com/franwanderley/Apdprh">Ver o Codigo <i class="fab fa-github"></i></a>
+         <div class="projetos">
+            <img src="./img/resultado.jpg" alt="Resultado da aplicação APDPRH">
+            <p>Um site para baixar os certificados dos cursos produzidos pela APDP.<br> Feito com Adianti Framework,PHP e MySQL</p>
+            <div class="btnprojetos">
+               <a href="http://apdprh-br.org.br/certificados/index.php?class=Login">Ver o Resultado <i class="fas fa-laptop"></i></a>
+               <a href="https://github.com/franwanderley/Apdprh">Ver o Codigo <i class="fab fa-github"></i></a>
+            </div>
          </div>
-      </div>
-      <div class="projetos">
-         <img src="./img/notebook2.jpg" alt="Resultado da aplicação Clinica São Lucas">
-         <p>Um site para Clinica São Lucas, feito para obter informações<br> Feito com HTML,CSS e JQUERY</p>
-         <div class="btnprojetos">
-            <a href="http://clinicasobral.ga/saolucas">Ver o Resultado <i class="fas fa-laptop"></i></a>
-            <a href="https://github.com/franwanderley/clinicasaolucas">Ver o Codigo <i class="fab fa-github"></i></a>
+         <div class="projetos">
+            <img src="./img/notebook2.jpg" alt="Resultado da aplicação Clinica São Lucas">
+            <p>Um site para Clinica São Lucas, feito para obter informações<br> Feito com HTML,CSS e JQUERY</p>
+            <div class="btnprojetos">
+               <a href="http://clinicasobral.ga/saolucas">Ver o Resultado <i class="fas fa-laptop"></i></a>
+               <a href="https://github.com/franwanderley/clinicasaolucas">Ver o Codigo <i class="fab fa-github"></i></a>
+            </div>
          </div>
-      </div>
-
+      </div>  
    </main>
    <footer>
       <h2>Francisco Wanderley</h2>
