ajuste no codigo

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
    <header>
       <h3>PORTFOLIO</h3>
       <h1>FRANCISCO WANDERLEY</h1>
-      <p>| Full Stack JavaScript | FullStack PHP |</p>
-      <a class="btnsabermais" href="#projetos">Saiba Mais <i class="fas fa-sort-down fa-2x"></i></a>
+      <p>| Full Stack JavaScript |</p>
+      <a href="#project">Saiba Mais <i class="fas fa-sort-down fa-2x"></i></a>
    </header>
    <main>
-      <div class="sobre">
+      <div class="about">
          <h2>Sobre</h2>
          <img src="./img/OK.jpg" alt="Franciso Wanderly">
          <p>Estou me graduando em ciências da computação, 
@@ -32,55 +32,55 @@
             durante seis meses.</p>
       </div>
       <h2>Alguns dos meus projetos</h2>
-      <div class="allproject">
-         <div class="projetos">
+      <div class="all-projects">
+         <div class="project">
             <img src="./img/todo.jpg" alt="Simples ToDoList">
             <p>Um simples ToDOList com tema light/dark e que salvar suas informações. <br> Feito com ReactJS, NextJs e TypeScript</p>
-            <div class="btnprojetos">
+            <div class="btn-projects">
                <a href="https://todolist-xi.vercel.app/">Ver o Resultado <i class="fas fa-laptop"></i></a>
                <a href="https://github.com/franwanderley/ToDoList">Ver o Codigo <i class="fab fa-github"></i></a>
             </div>
          </div>
 
-         <div class="projetos" id="projetos">
+         <div class="project" id="project">
             <img src="./img/PlantManager.png" alt="Resultado da aplicação PlantManager">
             <p>Um aplicativo para você não esquecer de regar suas plantas <br> Feito com Expo, React Native e TypeScript</p>
-            <div class="btnprojetos">
+            <div class="btn-projects">
                <a href="https://drive.google.com/file/d/17_FvERMIj2LToRfzFV__T9UET7rR8ZIt/view?usp=sharing">Ver o Resultado <i class="fas fa-laptop"></i></a>
                <a href="https://github.com/franwanderley/plantmanager">Ver o Codigo <i class="fab fa-github"></i></a>
             </div>
          </div>
 
-         <div class="projetos">
+         <div class="project">
             <img src="./img/rifatube.jpg" alt="Resultado da aplicação Rifatube">
             <p>Um site onde o usuario pode participar de um sorteio ou usar um dos seus produtos para o sorteio. <br> Feito com NodeJS, ReactJS e TypeScript</p>
-            <div class="btnprojetos">
+            <div class="btn-projects">
                <a href="https://rifatube.herokuapp.com/">Ver o Resultado <i class="fas fa-laptop"></i></a>
                <a href="https://github.com/franwanderley/rifatube">Ver o Codigo <i class="fab fa-github"></i></a>
             </div>
          </div>
          <br>
-         <div class="projetos">
+         <div class="project">
             <img src="./img/moveit.png" alt="Resultado da aplicação Moveit">
             <p>Um site parecido com o pomodoro só que em vez disso os intervalos são exercírcios <br> Feito com NextJs,ReactJS e TypeScript</p>
-            <div class="btnprojetos">
+            <div class="btn-projects">
                <a href="https://moveit-one-iota.vercel.app/">Ver o Resultado <i class="fas fa-laptop"></i></a>
                <a href="https://github.com/franwanderley/moveit_NLW4">Ver o Codigo <i class="fab fa-github"></i></a>
             </div>
          </div>
 
-         <div class="projetos">
+         <div class="project">
             <img src="./img/resultado.jpg" alt="Resultado da aplicação APDPRH">
             <p>Um site para baixar os certificados dos cursos produzidos pela APDP.<br> Feito com Adianti Framework,PHP e MySQL</p>
-            <div class="btnprojetos">
+            <div class="btn-projects">
                <a href="http://apdprh-br.org.br/certificados/index.php?class=Login">Ver o Resultado <i class="fas fa-laptop"></i></a>
                <a href="https://github.com/franwanderley/Apdprh">Ver o Codigo <i class="fab fa-github"></i></a>
             </div>
          </div>
-         <div class="projetos">
+         <div class="project">
             <img src="./img/notebook2.jpg" alt="Resultado da aplicação Clinica São Lucas">
             <p>Um site para Clinica São Lucas, feito para obter informações<br> Feito com HTML,CSS e JQUERY</p>
-            <div class="btnprojetos">
+            <div class="btn-projects">
                <a href="http://clinicasobral.ga/saolucas">Ver o Resultado <i class="fas fa-laptop"></i></a>
                <a href="https://github.com/franwanderley/clinicasaolucas">Ver o Codigo <i class="fab fa-github"></i></a>
             </div>
@@ -89,7 +89,7 @@
    </main>
    <footer>
       <h2>Francisco Wanderley</h2>
-      <div class="redessociais">
+      <div class="social-midia">
          <a href="https://www.github.com/franwanderley"> <i class="fab fa-github fa-2x"></i> </a>
          <a href="https://www.linkedin.com/franwanderley"> <i class="fab fa-linkedin-in fa-2x"></i> </a>
          <a href="https://www.behance.net/franwanderley"> <i class="fab fab fa-behance fa-2x"></i> </a>
