--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
    <link rel="icon" href="img/favicon.ico" />
    <link rel="preconnect" href="https://fonts.gstatic.com">
-   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="preload" >
    <link rel="stylesheet" type="text/css" href="./css/style.css" media="screen" />
    
-   <title>Portfolio | Francisco Wanderly</title>
+   <title>Francisco Wanderley | Portfólio de Desenvolvimento FullStack</title>
+   <meta name="description" content="Portfólio profissional de Francisco Wanderley, desenvolvedor front-end. Confira meus projetos em React, NextJs, NodeJS e spring boot.">
 
 </head>
 <body>
@@ -25,7 +26,8 @@
          <h2>Sobre</h2>
          <img src="./img/OK.jpg" alt="Franciso Wanderly">
          <p>
-            Sou desenvolvedor full stack, trabalhei na zallpy durante dois anos como desenvolvedor fullstack, usando react, Java spring boot, oracle, docker e Scrum
+            Sou desenvolvedor full stack, trabalhei na zallpy durante dois anos como desenvolvedor fullstack,
+            usando react, Java spring boot, oracle, docker e Scrum e trabalhei como freelancer utilizando NodeJs,NestJs e react native
              faço faculdade de ciencias da computação atualmente estou no 7° periodo.
          </p>
       </div>
@@ -41,7 +43,7 @@
 
          <div class="project">
             <img src="./img/notebook2.jpg" alt="Resultado da aplicação Clinica São Lucas">
-            <p>Um site para Clinica São Lucas, feito para obter informações<br> Feito com HTML,CSS e JQUERY</p>
+            <p>Uma landing page responsiva para Clinica São Lucas, feito para obter informações<br> Feito com HTML,CSS e JQUERY</p>
             <div class="btn-projects">
                <a target="_blank" href="http://clinicasobral.ga/saolucas">Ver o Resultado <i class="fas fa-laptop"></i></a>
                <a target="_blank" href="https://github.com/franwanderley/clinicasaolucas">Ver o Codigo <i class="fab fa-github"></i></a>
@@ -86,11 +88,11 @@
       </div>  
    </main>
    <footer>
-      <h2>Francisco Wanderley</h2>
+      <h2>Francisco Wanderly</h2>
       <div class="social-midia">
-         <a href="https://www.github.com/franwanderley"> <i class="fab fa-github fa-2x"></i> </a>
-         <a href="https://www.linkedin.com/franwanderley"> <i class="fab fa-linkedin-in fa-2x"></i> </a>
-         <a href="https://www.behance.net/franwanderley"> <i class="fab fab fa-behance fa-2x"></i> </a>
+         <a rel="noopener" href="https://www.github.com/franwanderley"> <i class="fab fa-github fa-2x"></i> </a>
+         <a rel="noopener" href="https://www.linkedin.com/in/franwanderley"> <i class="fab fa-linkedin-in fa-2x"></i> </a>
+         <a rel="noopener" href="https://www.behance.net/franwanderley"> <i class="fab fab fa-behance fa-2x"></i> </a>
       </div>
       <div class="copy">
          <a href="mailto:wanderley3101@gmail.com">Created by Francisco Wanderly</a>
