--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <img src="./img/OK.jpg" alt="Franciso Wanderly">
          <p>
             Sou desenvolvedor full stack, trabalhei na zallpy durante dois anos como desenvolvedor fullstack,
-            usando react, Java spring boot, oracle, docker e Scrum e trabalhei como freelancer utilizando NodeJs,NestJs e react native
+            usando react, Java spring boot, oracle, docker e Scrum, hoje trabalho como freelancer utilizando NodeJs, NestJs e react native
              faço faculdade de ciencias da computação atualmente estou no 7° periodo.
          </p>
       </div>
