--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="preload" >
    <link rel="stylesheet" type="text/css" href="./css/style.css" media="screen" />
    
-   <title>Francisco Wanderley | Portfólio de Desenvolvimento FullStack</title>
+   <title>Francisco Wanderly | Portfólio de Desenvolvimento FullStack</title>
    <meta name="description" content="Portfólio profissional de Francisco Wanderley, desenvolvedor front-end. Confira meus projetos em React, NextJs, NodeJS e spring boot.">
 
 </head>
